WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103066
[V8] fix DOMWrapperWorld destructor
https://bugs.webkit.org/show_bug.cgi?id=103066
Summary
[V8] fix DOMWrapperWorld destructor
Dan Carney
Reported
2012-11-22 06:37:00 PST
[V8] fix DOMWrapperWorld destructor
Attachments
Patch
(4.19 KB, patch)
2012-11-22 06:39 PST
,
Dan Carney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dan Carney
Comment 1
2012-11-22 06:39:51 PST
Created
attachment 175664
[details]
Patch
jochen
Comment 2
2012-11-22 06:51:28 PST
Comment on
attachment 175664
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=175664&action=review
> Source/WebCore/bindings/v8/DOMWrapperWorld.cpp:85 > + ASSERT(!isMainWorld());
why is the assert and the if in the next line not using the same condition?
Dan Carney
Comment 3
2012-11-22 06:55:08 PST
Comment on
attachment 175664
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=175664&action=review
>> Source/WebCore/bindings/v8/DOMWrapperWorld.cpp:85 >> + ASSERT(!isMainWorld()); > > why is the assert and the if in the next line not using the same condition?
there is a third type of world - uninitialized, which is the target of the return statement
WebKit Review Bot
Comment 4
2012-11-22 14:56:17 PST
Comment on
attachment 175664
[details]
Patch Clearing flags on attachment: 175664 Committed
r135545
: <
http://trac.webkit.org/changeset/135545
>
WebKit Review Bot
Comment 5
2012-11-22 14:56:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug