[V8] fix DOMWrapperWorld destructor https://bugs.webkit.org/show_bug.cgi?id=103066

Patch by Dan Carney <dcarney@google.com> on 2012-11-22
Reviewed by Jochen Eisinger.

DOMWrapperWorld had a workaround in place during deletion.
This patch brings it in line with WebKit standards.

No new tests: refactor.

* bindings/v8/DOMWrapperWorld.cpp:
(WebCore::DOMWrapperWorld::~DOMWrapperWorld):
(WebCore::DOMWrapperWorld::ensureIsolatedWorld):
* bindings/v8/DOMWrapperWorld.h:
(DOMWrapperWorld):
(WebCore::DOMWrapperWorld::isolatedWorldDOMDataStore):

Canonical link: https://commits.webkit.org/121206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135545 268f45cc-cd09-0410-ab3c-d52691b4dbfc